# spermdotfun

./: .dockerignore  .gitignore  Dockerfile  README.md  debug_binance.js  doc.tx  package-lock.json  package.json  server.js  test_socket.js  tsconfig.json  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
avalanche-contracts/: SprmGame.vrf.sol  foundry.toml
backend/: .env.example  Dockerfile  betResolution.js  config.js  evm.js  package.json  physics.js  priceFeed.js  profileRoutes.js  server.js  state.js  vrfManager.js
components/: BetSidebar.tsx  ChatSidebar.tsx  GameHUD.tsx  GlobalChat.tsx  LeftRail.tsx  LeftSidebar.tsx  MultiplierBar.tsx  OnboardingGuide.tsx  Providers.tsx  StockGrid.tsx  TopHeader.tsx  WalletProvider.tsx  leftRailShared.ts
context/: SessionWalletContext.tsx
docs/: architecture.md  core-functions.md  file-structure.md  system-architecture.md  system-design.md  technical-architecture.md  user-flow.md
hooks/: useLiveGameStats.ts  useProfileData.ts  useSessionWallet.ts  useSprmBalance.ts  useUsername.ts
lib/: friendlyError.ts  sessionWallet.ts  username.ts
scripts/: check-price-chainlink.js  init-devnet.js  prefund-escrow.js  profile-backfill.js  profile-migrate.js  profile-schema.sql
sprmfun-anchor/: .gitignore  Anchor.toml  Cargo.toml  package.json
sprmfun-anchor/patches/constant_time_eq/: Cargo.toml
sprmfun-anchor/patches/constant_time_eq/src/: lib.rs
sprmfun-anchor/programs/sprmfun-anchor/: Cargo.toml
sprmfun-anchor/programs/sprmfun-anchor/src/: lib.rs  lib_backup.rs
sprmfun-anchor/tests/: sprmfun-anchor.ts
(+124 files in other folders)
