[workspace]
members = [
    "programs/*"
]
resolver = "2"

# Patch constant_time_eq 0.4.2 (requires edition2024 / rustc 1.85+) with
# a local shim that is compatible with the Solana toolchain (rustc 1.84.x).
[patch.crates-io]
constant_time_eq = { path = "patches/constant_time_eq" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

